<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PakkaBill</string>
    <string name="open_in_pnl">Meesho P&amp;L</string>
    <string name="shortcut_pnl">Meesho P&amp;L</string>
    <string name="shortcut_pnl_long">Profit, returns and RTO</string>
    <string name="shortcut_upload">Add files</string>
    <string name="shortcut_upload_long">Add Meesho payment files</string>
    <string name="shortcut_costs">Costs</string>
    <string name="shortcut_costs_long">Product costs</string>
    <string name="widget_title">PakkaBill real profit</string>
    <string name="widget_empty">Add a Meesho payment report</string>
    <string name="widget_desc">This month\'s real Meesho profit at a glance</string>
</resources>
