<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/shortcut_pnl"
        android:shortcutId="pnl"
        android:shortcutLongLabel="@string/shortcut_pnl_long"
        android:shortcutShortLabel="@string/shortcut_pnl">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.pakkabill.app.MainActivity"
            android:targetPackage="com.pakkabill.app" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/shortcut_new"
        android:shortcutId="upload"
        android:shortcutLongLabel="@string/shortcut_upload_long"
        android:shortcutShortLabel="@string/shortcut_upload">
        <intent
            android:action="com.pakkabill.app.UPLOAD"
            android:targetClass="com.pakkabill.app.MainActivity"
            android:targetPackage="com.pakkabill.app" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/shortcut_bills"
        android:shortcutId="costs"
        android:shortcutLongLabel="@string/shortcut_costs_long"
        android:shortcutShortLabel="@string/shortcut_costs">
        <intent
            android:action="com.pakkabill.app.COSTS"
            android:targetClass="com.pakkabill.app.MainActivity"
            android:targetPackage="com.pakkabill.app" />
    </shortcut>
</shortcuts>
